--- a/index.html
+++ b/index.html
@@ -15,20 +15,47 @@
 
 <body>
     <table id="my_table" class="display">
+
+        <button class="btn">Apply</button>
+
+        <div class="dataTables_length" id="my_table_length">
+            <label> <select name="my_table_length" aria-controls="my_table" class="">
+                <option value="Select a category">Select a category</option>
+                <option value="Books">Books</option>
+                <option value="Simulations">Simulations</option>
+                <option value="50">50</option>
+                <option value="100">100</option>
+            </select> entries</label>
+        </div>
         <thead>
             <tr>
-                <th>Column 1</th>
-                <th>Column 2</th>
+                <th>ID</th>
+                <th>Image</th>
+                <th>Product name</th>
+                <th>Category</th>
+                <th>Price</th>
+                <th>Quantity</th>
+                <th>Status</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>Row 1 Data 1</td>
                 <td>Row 1 Data 2</td>
+                <td>Row 1 Data 3</td>
+                <td>Row 1 Data 4</td>
+                <td>Row 1 Data 5</td>
+                <td>Row 1 Data 6</td>
+                <td>Row 1 Data 7</td>
             </tr>
             <tr>
                 <td>Row 2 Data 1</td>
                 <td>Row 2 Data 2</td>
+                <td>Row 2 Data 3</td>
+                <td>Row 2 Data 4</td>
+                <td>Row 2 Data 5</td>
+                <td>Row 2 Data 6</td>
+                <td>Row 2 Data 7</td>
             </tr>
         </tbody>
     </table>
