--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </tr>
         </tbody>
     </table>
-    <script src="/js/index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
