--- a/index.html
+++ b/index.html
@@ -14,68 +14,55 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
 
 
 
 </head>
 
 <body>
-    <div id="my_table_wrapper
-    " class="dataTables_wrapper no-footer container">
-        <!-- <div class="navigation">
-            <div class="dataTables_length" id="my_table_length"></div>
-
-            <div class="dataTables_select" id="my_table_length">
-                <select name="my_table_select" aria-controls="my_table" class="select">
-                        <option value="Select a category">Select a category</option>
-                        <option value="Books">Books</option>
-                        <option value="Simulations">Simulations</option>
-                        <option value="Membership">Membership</option>
-                    </select>
-            </div>
-            <div class="dataTables_status" id="my_table_length">
-                <select name="my_table_length" aria-controls="my_table" class="status">
-                        <option value="Select a category">Filter by stock status</option>
-                        <option value="In stock">In stock</option>
-                        <option value="Out of stock">Out of stock</option>
-                    </select>
-            </div>
-            <div id="my_table_filter" class="dataTables_filter"></div>
-        </div> -->
-        <table id="my_table" class="display dataTable no-footer" aria-describedby="my_table_info">
-            <!-- <button class="applyButton">Apply</button> -->
-            <thead class="display_table">
-                <tr>
-                    <th class="sorting sorting_asc" tabindex="0" aria-controls="my_table" rowspan="1" colspan="1" aria-sort="ascending" aria-label="ID: activate to sort column descending" style="width: 107px;">ID</th>
-                    <th class="sorting" tabindex="0" aria-controls="my_table" rowspan="1" colspan="1" aria-label="Image: activate to sort column ascending" style="width: 107px;">Image</th>
-                    <th class="sorting" tabindex="0" aria-controls="my_table" rowspan="1" colspan="1" aria-label="Product name: activate to sort column ascending" style="width: 139px;">Product name</th>
-                    <th class="sorting" tabindex="0" aria-controls="my_table" rowspan="1" colspan="1" aria-label="Category: activate to sort column ascending" style="width: 107px;">Category</th>
-                    <th class="sorting" tabindex="0" aria-controls="my_table" rowspan="1" colspan="1" aria-label="Price: activate to sort column ascending" style="width: 107px;">Price</th>
-                    <th class="sorting" tabindex="0" aria-controls="my_table" rowspan="1" colspan="1" aria-label="Quantity: activate to sort column ascending" style="width: 107px;">Quantity</th>
-                    <th class="sorting" tabindex="0" aria-controls="my_table" rowspan="1" colspan="1" aria-label="Status: activate to sort column ascending" style="width: 108px;">Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr class="odd">
-                    <td class="sorting_1">Row 1 Data 1</td>
-                    <td>Row 1 Data 2</td>
-                    <td>Row 1 Data 3</td>
-                    <td>Row 1 Data 4</td>
-                    <td>Row 1 Data 5</td>
-                    <td>Row 1 Data 6</td>
-                    <td>Row 1 Data 7</td>
-                </tr>
-                <tr class="even">
-                    <td class="sorting_1">Row 2 Data 1</td>
-                    <td>Row 2 Data 2</td>
-                    <td>Row 2 Data 3</td>
-                    <td>Row 2 Data 4</td>
-                    <td>Row 2 Data 5</td>
-                    <td>Row 2 Data 6</td>
-                    <td>Row 2 Data 7</td>
-                </tr>
-            </tbody>
-        </table>
+    <table id="my_table" class="display dataTable no-footer" aria-describedby="my_table_info">
+        <thead class="display_table">
+            <tr>
+                <th class="sorting sorting_asc" tabindex="0" aria-controls="my_table" rowspan="1" colspan="1" aria-sort="ascending" aria-label="ID: activate to sort column descending" style="width: 107px;">ID</th>
+                <th class="sorting" tabindex="0" aria-controls="my_table" rowspan="1" colspan="1" aria-label="Image: activate to sort column ascending" style="width: 107px;">Image</th>
+                <th class="sorting" tabindex="0" aria-controls="my_table" rowspan="1" colspan="1" aria-label="Product name: activate to sort column ascending" style="width: 139px;">Product name</th>
+                <th class="sorting" tabindex="0" aria-controls="my_table" rowspan="1" colspan="1" aria-label="Category: activate to sort column ascending" style="width: 107px;">Category</th>
+                <th class="sorting" tabindex="0" aria-controls="my_table" rowspan="1" colspan="1" aria-label="Price: activate to sort column ascending" style="width: 107px;">Price</th>
+                <th class="sorting" tabindex="0" aria-controls="my_table" rowspan="1" colspan="1" aria-label="Quantity: activate to sort column ascending" style="width: 107px;">Quantity</th>
+                <th class="sorting" tabindex="0" aria-controls="my_table" rowspan="1" colspan="1" aria-label="Status: activate to sort column ascending" style="width: 108px;">Status</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr class="odd">
+                <td class="sorting_1">Row 1 Data 1</td>
+                <td>Row 1 Data 2</td>
+                <td>Row 1 Data 3</td>
+                <td>Row 1 Data 4</td>
+                <td>Row 1 Data 5</td>
+                <td>Row 1 Data 6</td>
+                <td>Row 1 Data 7</td>
+            </tr>
+            <tr class="even">
+                <td class="sorting_1">Row 2 Data 1</td>
+                <td>Row 2 Data 2</td>
+                <td>Row 2 Data 3</td>
+                <td>Row 2 Data 4</td>
+                <td>Row 2 Data 5</td>
+                <td>Row 2 Data 6</td>
+                <td>Row 2 Data 7</td>
+            </tr>
+            <tr class="even">
+                <td class="sorting_1">Row 3 Data 1</td>
+                <td>Row 3 Data 2</td>
+                <td>Row 3 Data 3</td>
+                <td>Row 3 Data 4</td>
+                <td>Row 3 Data 5</td>
+                <td>Row 3 Data 6</td>
+                <td>Row 3 Data 7</td>
+            </tr>
+        </tbody>
+    </table>
 
     </div>
     <script src="./js/index.js"></script>
